--- a/manifest.json
+++ b/manifest.json
@@ -3,4 +3,9 @@
     "version": "0.0.1",
     "description": "Select a random line from a text document.",
     "manifest_version": 1
-  }
+  },
+    "browser_action": {
+		"default_popup": "popup.html",
+		"default_icon": "icons/default.png",
+		"default_title": "RandomSelection"
+    }
