--- a/manifest.json
+++ b/manifest.json
@@ -4,6 +4,9 @@
     "description": "Select a random line from a text document.",
     "manifest_version": 1
   },
+	"icons": { "16": "icon_16.png",
+          	 "48": "icon_48.png",
+         	 "128": "icon_128.png" },
     "browser_action": {
 		"default_popup": "popup.html",
 		"default_icon": "icons/default.png",
