fix the manifest and the background.js

--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,11 @@
     "name": "Random Selection",
     "version": "0.0.1",
     "description": "Select a random line from a text document.",
-    "manifest_version": 1
-  },
+    "manifest_version": 2,
+	"background": {
+		"scripts": ["background.js"],
+		"persistent": false
+	},
 	"icons": { "16": "icon_16.png",
           	 "48": "icon_48.png",
          	 "128": "icon_128.png" },
@@ -12,3 +15,4 @@
 		"default_icon": "icons/default.png",
 		"default_title": "RandomSelection"
     }
+  }
