--- a/manifest.json
+++ b/manifest.json
@@ -9,7 +9,10 @@
 	},
     "browser_action": {
 		"default_popup": "popup.html",
-		"default_icon": "icons/default.png",
 		"default_title": "RandomSelection"
-    }
+    },
+	"icons": { 
+        "48": "icons/icon_48.png",
+        "128": "icons/icon_128.png"
+	}
   }
