Tweaks to the look and cleaning up code
Clean up HTML and CSS and make the name relevent to the topic.

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
   {
-    "name": "Random Selection",
+    "name": "Student Selector",
     "version": "0.0.1",
     "description": "Select a random line from a text document.",
     "manifest_version": 2,
