IT WORKS HECK YEAH

--- a/manifest.json
+++ b/manifest.json
@@ -2,13 +2,19 @@
   "name": "Randomizer",
   "version": "1.0",
   "description": "Select a random item from a local list.",
+  "background": {
+		"persistent": true,
+		"scripts":["background.js"]
+	},
   "manifest_version": 2,
   "browser_action": {
     "default_popup": "popup.html",
     "default_title": "Randomizer"
   },
   "permissions": [
-    "storage"
+    "storage",
+    "tabs",
+		"<all_urls>"
   ],
   "icons": { 
     "48": "icons/icon_48.png",
