--- a/manifest.json
+++ b/manifest.json
@@ -14,7 +14,8 @@
   "permissions": [
     "storage"
   ],
-  "icons": { 
+  "icons": {
+    "16": "icons/icon_16.png",
     "48": "icons/icon_48.png",
     "128": "icons/icon_128.png"
   }
